Add form button to route to a 'delete' view/page.

--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -24,5 +24,9 @@
 
     <br><a href="/">Homepage</a><br>
 
+    <br><form action="/items/delete" method="post">
+      <button type="submit" name="button" class="btn btn-light">Clear All Items</button>
+    </form>
+
   </body>
 </html>
