--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -17,7 +17,7 @@
     <ul>
       @foreach (Item item in Model)
       {
-        <li><a href="/item/@item.Id">@item.Description</a></li>
+        <li><a href="/items/@item.Id">@item.Description</a></li>
       }
     </ul>
     
