--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -1,5 +1,5 @@
 @{
-  Layout = "_Layout";
+  Layout = "_Layout"; 
 }
 
 @model ToDoList.Models.Item
@@ -9,3 +9,7 @@
 <p>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</p>
 <p>Item's ID : @Html.DisplayFor(model => model.ItemId)</p>
 <p>@Html.ActionLink("Back to list", "Index")</p>
+
+<p>@Html.ActionLink($"Edit this item", "Edit", new {id=Model.ItemId})</p>
+
+<p>@Html.ActionLink("Delete this item", "Delete", new {id=Model.ItemId})</p>
