--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,3 +1,4 @@
+@*
 @{
   Layout = "_Layout";
 }
@@ -7,7 +8,7 @@
 
 <h1>Items</h1>
 
-@* the below if is not working *@
+//the below if is not working 
 @if (@Model.Count == 0)
 {
   <h3>No items have been added yet!</h3>
@@ -23,6 +24,7 @@
 <br><p>@Html.ActionLink("Add new item", "Create")</p>
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
+*@
 
 
 
