--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -24,6 +24,7 @@ else
   </ul>
 }
 
+<p>@Html.ActionLink("Add a Category", "AddCategory", new { id = Model.ItemId })</p>
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
 
