--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -20,6 +20,11 @@ else
     @foreach (var join in Model.JoinEntities)
     {
       <li>@join.Category.Name</li>
+      @using (Html.BeginForm("DeleteCategory", "Items"))
+      {
+        @Html.Hidden("joinId", @join.CategoryItemId)
+        <input type ="submit" value="Delete from category"/>
+      }<br>
     }
   </ul>
 }
