Change 'delete category' button text to 'remove category.'

--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -23,7 +23,7 @@ else
       @using (Html.BeginForm("DeleteCategory", "Items"))
       {
         @Html.Hidden("joinId", @join.CategoryItemId)
-        <input type ="submit" value="Delete from category"/>
+        <input type ="submit" value="remove category"/>
       }<br>
     }
   </ul>
